# mxl-web

./: .editorconfig  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  README.md  package-lock.json  package.json  pixi.toml  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: deploy.yml  test-install.yml
docs/: llms.txt
src/: app.css  app.html
src-c/: dopri5.c  radau5_wrapper.c
src/lib/: Accordion.svelte  AnalysesDashboard.svelte  BuildChooser.svelte  DynBoxGrid.svelte  DynBoxRow.svelte  EditorTutorial.svelte  EqEditor.svelte  EqNode.svelte  EquationNode.svelte  Icon.svelte  InlineGrid.svelte  InlineGrid2.svelte  InlineGrid3.svelte  InlineGrid4.svelte  LogoBar.svelte  Math.svelte  MathMl.ts  ModelBuilder.ts  ModelCard.svelte  ModelEditor.svelte  ModelGallery.svelte  ModelHighlight.svelte  Navbar.svelte  OdeModelEditor.svelte  Page.svelte  Pair.svelte  Pam.svelte  PamScanEditor.svelte  ParameterScan.svelte  ParameterScanEditor.svelte  ParameterScanSimulator.svelte  Popover.svelte  PopoverSaveButton.svelte  Row.svelte  RowApart.svelte  Simulator.svelte  SimulatorComp.svelte  Slider.svelte  SteadyStateDashboard.svelte  SteadyStateModelEditor.svelte  (+20 more)
src/lib/buttons/: IconButton.svelte  ModelEditButton.svelte  PopoverSaveButton.svelte  Tab.svelte  (+5 more)
src/routes/: +error.svelte  +layout.svelte  +page.svelte  FeatureBox.svelte
static/: main.py
static/wasm/: radau5.js  radau5.wasm
tests/integrators/: explicit.test.ts  utils.test.ts
tests/mathml/: codegen-parity.test.ts  codegen.test.ts
(+173 files in other folders)
